--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
        		<artifactId>gdx-freetype</artifactId>
         	<version>${libgdx.version}</version>
     	</dependency>
+         <!-- Native FreeType support -->
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-freetype-platform</artifactId>
+            <version>${libgdx.version}</version>
+            <classifier>natives-desktop</classifier>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
